grammar.js
    program: ($) =>
      seq(
        optional(
          choice(
            seq($.requires_directive_list, optional($.using_directive_list)),
            seq($.using_directive_list, optional($.requires_directive_list)),
          ),
        ),
        optional($.param_block),
        optional($.statement_list),
      ),

    integer_literal: ($) =>
      choice($.decimal_integer_literal, $.hexadecimal_integer_literal),

    decimal_integer_literal: ($) =>
      token(
        seq(
          psDecimalDigits(),
          optional(/[yY]|[uU][yYsSlL]|[uUsSdDnNlL]/),
          optional(/[kKmMgGtTpP][bB]/),
        ),
      ),

    string_literal: ($) =>
      choice(
        $.expandable_string_literal,
        $.verbatim_string_characters,
        $.expandable_here_string_literal,
        $.verbatim_here_string_characters,
      ),

    _expandable_string_content: ($) =>
      choice(
        $._expandable_string_immcontent,
        $.variable,
        $.sub_expression,
        token.immediate(psDollarLiteral()),
        token.immediate(/`.{1}|`\r?\n/),
        token.immediate('""'),
        token.immediate('$'),
      ),

    _expandable_string_leading_text: () => token(seq('"', /[^\$\"`]+|""/)),

    _expandable_string_leading_literal_dollar: () =>
      token(seq('"', psDollarLiteral())),

    expandable_string_literal: ($) =>
      prec(
        1,
        choice(
          seq(
            choice(
              $._expandable_string_leading_text,
              $._expandable_string_leading_literal_dollar,
              seq('"', $.variable),
              seq('"', $.sub_expression),
              seq('"', token.immediate(/`.{1}|`\r?\n/)),
              seq('"', token.immediate('""')),
              seq('"', token.immediate('$')),
            ),
            repeat($._expandable_string_content),
            token.immediate('"'),
          ),
          '""',
        ),
      ),

    verbatim_string_characters: ($) =>
      token(seq('\'', repeat(choice(/[^']+/, '\'\'')), '\'')),

    simple_name: ($) => psIdentifier(),

    // Type names
    type_identifier: ($) => psTypeIdentifier(),

    type_name: ($) =>
      choice(
        $.type_identifier,
        seq($.type_name, '.', $.type_identifier),
        seq($.type_name, '+', $.type_identifier),
      ),

    array_type_name: ($) => seq($.type_name, '['),
    assignment_operator: ($) =>
      choice('=', '!=', '+=', '*=', '/=', '%=', '-=', '??='),

    comparison_operator: ($) =>
      choice(
        reservedWord('-as'),
        reservedWord('-ccontains'),
        reservedWord('-ceq'),
        reservedWord('-cge'),
        reservedWord('-cgt'),
        reservedWord('-cle'),
        reservedWord('-clike'),
        reservedWord('-clt'),
        reservedWord('-cmatch'),
        reservedWord('-cne'),
        reservedWord('-cnotcontains'),
        reservedWord('-cnotlike'),
        reservedWord('-cnotmatch'),
        reservedWord('-contains'),
        reservedWord('-creplace'),
        reservedWord('-csplit'),
        reservedWord('-eq'),
        reservedWord('-ge'),
        reservedWord('-gt'),
        reservedWord('-icontains'),
        reservedWord('-ieq'),
        reservedWord('-ige'),
        reservedWord('-igt'),
        reservedWord('-ile'),
        reservedWord('-ilike'),
        reservedWord('-ilt'),
        reservedWord('-imatch'),
        reservedWord('-in'),
        reservedWord('-ine'),
        reservedWord('-inotcontains'),
        reservedWord('-inotlike'),
        reservedWord('-inotmatch'),
        reservedWord('-ireplace'),
        reservedWord('-is'),
        reservedWord('-isnot'),
        reservedWord('-isplit'),
        reservedWord('-join'),
        reservedWord('-le'),
        reservedWord('-like'),
        reservedWord('-lt'),
        reservedWord('-match'),
        reservedWord('-ne'),
        reservedWord('-notcontains'),
        reservedWord('-notin'),
        reservedWord('-notlike'),
        reservedWord('-notmatch'),
        reservedWord('-replace'),
        reservedWord('-shl'),
        reservedWord('-shr'),
        reservedWord('-split'),
      ),

    format_operator: ($) => reservedWord('-f'),

    // Variables
    variable: ($) =>
      choice(
        '$$',
        '$^',
        '$?',
        '$_',
        token(
          seq(
            '$',
            optional(
              seq(
                choice(
                  reservedWord('global:'),
                  reservedWord('local:'),
                  reservedWord('private:'),
                  reservedWord('script:'),
                  reservedWord('using:'),
                  reservedWord('workflow:'),
                  psVariablePart(),
                ),
                ':',
              ),
            ),
            choice(psVariablePart(), '?'),
          ),
        ),
        token(
          seq(
            '@',
            optional(
              seq(
                choice(
                  reservedWord('global:'),
                  reservedWord('local:'),
                  reservedWord('private:'),
                  reservedWord('script:'),
                  reservedWord('using:'),
                  reservedWord('workflow:'),
                  psVariablePart(),
                ),
                ':',
              ),
            ),
            choice(psVariablePart(), '?'),
          ),
        ),
        $.braced_variable,
      ),

    braced_variable: ($) =>
      token(
        seq(
          '${',
          // A braced variable body accepts any character except `}` or a
          // trailing backtick; `` ` `` escapes the next character (including
          // `}`) so identifiers like `${vjOj`Q`gX}` or `${foo`}bar}` parse.
          // Written as an alternation because tree-sitter's regex engine
          // rejects `\s`/`\S` shorthands inside character classes.
          repeat1(choice(seq('`', choice(/./, /\s/)), /[^}`]/, /\s/)),
          '}',
        ),
      ),

    // Commands
    generic_token: ($) =>
      token(/[^\(\)\$\"\'\-\{\}@\|\[`\&\s][^\&\s\(\)\}\|;,]*/),

    // Command-argument fragments stop before interpolation or quoted-string
    // starts so adjacent native arguments like `/flag:"$($x)"` can concatenate.
    script_block: ($) =>
      choice(
        field('script_block_body', $.script_block_body),
        seq(
          seq($.param_block, $._statement_boundary, repeat(';')),
          field('script_block_body', optional($.script_block_body)),
        ),
      ),

    script_block_body: ($) =>
      choice(
        field('named_block_list', $.named_block_list),
        field('statement_list', $.statement_list),
      ),

    statement_block: ($) =>
      seq('{', field('statement_list', optional($.statement_list)), '}'),

    statement_list: ($) => repeat1($._statement),

    _statement: ($) =>
      prec.right(
        choice(
          $.if_statement,
          seq(optional($.label), $._labeled_statement),
          $.function_statement,
          $.class_statement,
          $.enum_statement,
          $.attribute_statement,
          seq($.flow_control_statement, $._statement_boundary),
          $.trap_statement,
          $.try_statement,
          $.data_statement,
          $.inlinescript_statement,
          $.parallel_statement,
          $.sequence_statement,
          seq($.pipeline, $._statement_boundary),
          $.empty_statement,
        ),
      ),

    foreach_statement: ($) =>
      seq(
        reservedWord('foreach'),
        optional($.foreach_parameter),
        '(',
        $.variable,
        reservedWord('in'),
        $.pipeline,
        ')',
        $.statement_block,
      ),

    foreach_parameter: ($) => choice(reservedWord('-parallel')),

    while_statement: ($) =>
      seq(
        reservedWord('while'),
        '(',
        field('condition', $.while_condition),
        ')',
        $.statement_block,
      ),

    while_condition: ($) => $.pipeline,

    do_statement: ($) =>
      seq(
        reservedWord('do'),
        $.statement_block,
        choice(reservedWord('while'), reservedWord('until')),
        '(',
        field('condition', $.while_condition),
        ')',
      ),

    flow_control_statement: ($) =>
      choice(
        seq(reservedWord('break'), optional($.label_expression)),
        seq(reservedWord('continue'), optional($.label_expression)),
        seq(reservedWord('throw'), optional($.pipeline)),
        seq(reservedWord('return'), optional($.pipeline)),
        seq(reservedWord('exit'), optional($.pipeline)),
      ),

    label: ($) => token(seq(':', psIdentifier())),

    label_expression: ($) => choice($.label, $.unary_expression),

    pipeline: ($) =>
      choice(
        $.assignment_expression,
        $._pipeline,
      ),

    _pipeline: ($) =>
      seq(
        $.pipeline_chain,
        repeat(seq($.pipeline_chain_tail, $.pipeline_chain)),
      ),

    pipeline_chain: ($) =>
      choice(
        seq(
          $._expression,
          optional($.redirections),
          optional($._pipeline_tail),
        ),
        seq(
          $.command,
          optional($.verbatim_command_argument),
          optional($._pipeline_tail),
        ),
      ),

    left_assignment_expression: ($) => $._expression,

    assignment_expression: ($) =>
      seq(
        $.left_assignment_expression,
        $.assignment_operator,
        field('value', $._assignment_value),
      ),

    _assignment_value: ($) =>
      prec.right(
        choice(
          $.if_statement,
          seq(optional($.label), $._labeled_statement),
          $.function_statement,
          $.class_statement,
          $.enum_statement,
          $.attribute_statement,
          $.flow_control_statement,
          $.trap_statement,
          $.try_statement,
          $.data_statement,
          $.inlinescript_statement,
          $.parallel_statement,
          $.sequence_statement,
          $.assignment_expression,
          alias($._pipeline, $.assignment_value),
        ),
      ),

    _pipeline_tail: ($) => repeat1(seq('|', $.command)),

    command: ($) =>
      choice(
        seq(
          field('command_name', $.command_name),
          field('command_elements', optional($.command_elements)),
        ),
        seq(
          $.command_invocation_operator,
          // optional($.command_module),
          field('command_name', $.command_name_expr),
          field('command_elements', optional($.command_elements)),
        ),
      ),

    command_invocation_operator: ($) => choice('.', '&'),

    // This rule is ignored as it does not appear as a rule
    // command_module: $ => $.primary_expression,

    _expandable_string_literal_immediate: ($) =>
      seq(
        repeat(
          choice(
            /[^\$"`]+/,
            $.variable,
            psDollarLiteral(),
            /`.{1}|`\r?\n/,
            '""',
            $.sub_expression,
            '$',
          ),
        ),
        '"',
      ),

    command_name: ($) =>
      seq(
        choice(
          /[^\{\}\(\);,\|\&`"'\s\r\n\[\]\+\-\$@<\!]+/,
          // tree-sitter does not allow to control lexer
          // each start keyword into _statement rule must be present here
          // https://github.com/airbus-cert/tree-sitter-powershell/issues/24
          new RegExp(caseInsensitive('break-')),
          new RegExp(caseInsensitive('continue-')),
          new RegExp(caseInsensitive('throw-')),
          new RegExp(caseInsensitive('return-')),
          new RegExp(caseInsensitive('exit-')),
          new RegExp(caseInsensitive('try-')),
          new RegExp(caseInsensitive('trap-')),
          new RegExp(caseInsensitive('if-')),
          new RegExp(caseInsensitive('function-')),
          new RegExp(caseInsensitive('filter-')),
          new RegExp(caseInsensitive('workflow-')),
          new RegExp(caseInsensitive('class-')),
          new RegExp(caseInsensitive('enum-')),
          new RegExp(caseInsensitive('switch-')),
          new RegExp(caseInsensitive('foreach-')),
          new RegExp(caseInsensitive('for-')),
          new RegExp(caseInsensitive('while-')),
          new RegExp(caseInsensitive('do-')),
          new RegExp(caseInsensitive('data-')),
          new RegExp(caseInsensitive('parallel-')),
          new RegExp(caseInsensitive('inlinescript-')),
          new RegExp(caseInsensitive('sequence-')),
          new RegExp(caseInsensitive('using-')),
        ),
        repeat(
          choice(
            token.immediate(/[^\{\}\(\);,\|\&"'\s\r\n]+/),
            seq(token.immediate('"'), $._expandable_string_literal_immediate),
            token.immediate('""'),
            token.immediate('\'\''),
          ),
        ),
      ),

    path_command_name_token: ($) => psRegex(`[${PS_COMMAND_NAME_CHARS}\\-\\.\\\\\\/]+`),

    // Use to parse command path
    path_command_name: ($) =>
      repeat1(choice($.path_command_name_token, $.variable)),

    command_name_expr: ($) =>
      choice($.command_name, $.path_command_name, $._primary_expression),

    command_elements: ($) => prec.right(repeat1($._command_element)),

    _command_element: ($) =>
      prec.right(
        choice(
          $.command_parameter,
          seq($._command_argument, optional($.argument_list)),
          $.redirection,
          $.stop_parsing,
        ),
      ),

    // Stop parsing is a token that end the parsing of command line
    command_argument_sep: ($) => prec.right(choice(repeat1(' '), ':')),

    // Adapt the grammar to have same behavior

    enum_statement: ($) =>
      seq(
        optional($.attribute_list),
        token(reservedWord('enum')),
        $.simple_name,
        '{',
        repeat(seq($.enum_member, $._statement_boundary, repeat(';'))),
        '}',
      ),

    enum_member: ($) =>
      seq($.simple_name, optional(seq('=', $.integer_literal))),

    // Expressions
    _expression: ($) => $._ternary_expression,

    _ternary_expression: ($) =>
      choice($.ternary_expression, $._null_coalesce_expression),

    ternary_expression: ($) =>
      prec.right(
        seq(
          $._null_coalesce_expression,
          '?',
          $._ternary_expression,
          ':',
          $._ternary_expression,
        ),
      ),

    _null_coalesce_expression: ($) =>
      choice($.null_coalesce_expression, $._logical_expression),

    null_coalesce_expression: ($) =>
      prec.left(
        seq($._null_coalesce_expression, '??', $._logical_expression),
      ),

    _logical_expression: ($) =>
      choice($.logical_expression, $._bitwise_expression),

    logical_expression: ($) =>
      prec.left(
        seq(
          $._logical_expression,
          choice(
            reservedWord('-and'),
            reservedWord('-or'),
            reservedWord('-xor'),
          ),
          $._bitwise_expression,
        ),
      ),

    _bitwise_expression: ($) =>
      choice($.bitwise_expression, $._comparison_expression),

    bitwise_expression: ($) =>
      prec.left(
        seq(
          $._bitwise_expression,
          choice(
            reservedWord('-band'),
            reservedWord('-bor'),
            reservedWord('-bxor'),
          ),
          $._comparison_expression,
        ),
      ),

    _comparison_expression: ($) =>
      choice($.comparison_expression, $._additive_expression),

    comparison_expression: ($) =>
      prec.left(
        seq(
          $._comparison_expression,
          $.comparison_operator,
          $._additive_expression,
        ),
      ),

    _additive_expression: ($) =>
      choice($.additive_expression, $._multiplicative_expression),

    additive_expression: ($) =>
      prec.left(
        seq(
          $._additive_expression,
          choice('+', '-'),
          $._multiplicative_expression,
        ),
      ),

    _multiplicative_expression: ($) =>
      choice($.multiplicative_expression, $._format_expression),

    _format_expression: ($) =>
      choice($.format_expression, $._range_expression),
