test/corpus/flow_control.txt
===
Throw with string
===

throw "Error occurred"

---

(program
  (statement_list
    (flow_control_statement
      (pipeline
        (pipeline_chain
          (unary_expression
            (string_literal
              (expandable_string_literal))))))))

===
Return with value
===

return 42

---

(program
  (statement_list
    (flow_control_statement
      (pipeline
        (pipeline_chain
          (unary_expression
            (integer_literal
              (decimal_integer_literal))))))))

===
Return without value
===

return

---

(program
  (statement_list
    (flow_control_statement)))

===
Exit with code
===

exit 1

---

(program
  (statement_list
    (flow_control_statement
      (pipeline
        (pipeline_chain
          (unary_expression
            (integer_literal
              (decimal_integer_literal))))))))

===
Break without label
===

break

---

(program
  (statement_list
    (flow_control_statement)))

===
Continue without label
===

continue

---

(program
  (statement_list
    (flow_control_statement)))

===
Throw without value
===

throw

---

(program
  (statement_list
    (flow_control_statement)))

================================================================================
Break to a bare label name
================================================================================

:outer while ($true) { break outer }

--------------------------------------------------------------------------------

(program
  (statement_list
    (label)
    (while_statement
      (while_condition
        (pipeline
          (pipeline_chain
            (unary_expression
              (variable)))))
      (statement_block
        (statement_list
          (flow_control_statement
            (label_expression
              (label_name))))))))

================================================================================
Continue to a bare label name
================================================================================

:outer foreach ($i in 1..3) { continue outer }

--------------------------------------------------------------------------------

(program
  (statement_list
    (label)
    (foreach_statement
      (variable)
      (pipeline
        (pipeline_chain
          (command
            (command_name))))
      (statement_block
        (statement_list
          (flow_control_statement
            (label_expression
              (label_name))))))))
