test/corpus/foreach.txt
===
Foreach basic
===

foreach ($item in $collection) {
    Write-Host $item
}

---

(program
  (statement_list
    (foreach_statement
      (variable)
      (pipeline
        (pipeline_chain
          (ternary_expression
            (null_coalesce_expression
              (logical_expression
                (bitwise_expression
                  (comparison_expression
                    (additive_expression
                      (multiplicative_expression
                        (format_expression
                          (range_expression
                            (array_literal_expression
                              (unary_expression
                                (variable))))))))))))))
      (statement_block
        statement_list: (statement_list
          (pipeline
            (pipeline_chain
              (command
                command_name: (command_name)
                command_elements: (command_elements
                  (command_argument_sep)
                  (array_literal_expression
                    (unary_expression
                      (variable))))))))))))

===
Foreach with -parallel
===

foreach -parallel ($item in $collection) {
    $item
}

---

(program
  (statement_list
    (foreach_statement
      (foreach_parameter)
      (variable)
      (pipeline
        (pipeline_chain
          (ternary_expression
            (null_coalesce_expression
              (logical_expression
                (bitwise_expression
                  (comparison_expression
                    (additive_expression
                      (multiplicative_expression
                        (format_expression
                          (range_expression
                            (array_literal_expression
                              (unary_expression
                                (variable))))))))))))))
      (statement_block
        statement_list: (statement_list
          (pipeline
            (pipeline_chain
              (ternary_expression
                (null_coalesce_expression
                  (logical_expression
                    (bitwise_expression
                      (comparison_expression
                        (additive_expression
                          (multiplicative_expression
                            (format_expression
                              (range_expression
                                (array_literal_expression
                                  (unary_expression
                                    (variable)))))))))))))))))))
